openmediavault (0.3.0.12) stable; urgency=low

  * Flush mailq once a day if email notification service is disabled.
  * Fix bug in Apt::getUpgraded RPC.
  * Mantis 0000488: Display icon in "Enabled" columns.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 26 May 2012 19:12:08 +0200

openmediavault (0.3.0.11) stable; urgency=low

  * Update locales.
  * Allow numbers as first character in a domain name.
  * Fix typo in language combobox. Thanks to Simon Jonsson.
  * Mantis 0000476: Mask whole webgui during loading Debian package lists.
    This will prevent user from clicking the 'Check' button twice while APT
    database is locked.
  * Mantis 0000480: Hosts Datei und fqdn mit IP 127.0.0.1

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 19 May 2012 22:45:12 +0200

openmediavault (0.3.0.10) stable; urgency=low

  * Update locales.
  * Add ability to reset WebGUI states, e.g. grid column order, which are
    stored in a browser cookie.
  * Add ability to group privileges grid.
  * Improve workflow, e.g. add typeahead to user/group comboboxes.
  * Mantis 0000469: Shared Folders: ACL - Filter on/off system users/groups.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 17 May 2012 00:28:53 +0200

openmediavault (0.3.0.9) stable; urgency=low

  * Update locales.
  * Add help informations in WebGUI to various form fields.
  * Mantis 0000449/0000455: 3TB Seagate Barracuda st3000dm001 can not be
    partitioned properly.
  * Mantis 0000459: Service FTP shares have wrong access privileges in
    proftpd.conf
  * Mantis 0000460: Shared Folders: ACL - Show owner of object in GUI.
  * Mantis 0000461: Permissions option in Add/Edit Shared Folder.
  * Mantis 0000462: NFS options are incorrectly written to /etc/exports.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 14 May 2012 18:10:39 +0200

openmediavault (0.3.0.8) stable; urgency=low

  * Fix broken user WebGUI.